# OpenGL

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kejunyao/opengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kejunyao/opengl/sample/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/kejunyao/opengl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openglSdk/: CMakeLists.txt  build.gradle
openglSdk/src/main/: AndroidManifest.xml
openglSdk/src/main/cpp/: AndroidLog.h  NativeOpenGL.cpp  OpenGL.cpp
openglSdk/src/main/cpp/egl/: EglHelper.cpp  EglHelper.h  EglThread.cpp  EglThread.h
openglSdk/src/main/cpp/shader/: ShaderUtils.h
openglSdk/src/main/java/com/kejunyao/opengl/: NativeOpenGL.java  NativeSurfaceView.java  OpenGL.java
